--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-simple-wysiwyg": "^3.4.0",
+    "react-web-share": "^2.0.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
